--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Studyxo SHS</string>
-    <string name="title_activity_main">Studyxo SHS</string>
+    <string name="app_name">GH-UniCheck</string>
+    <string name="title_activity_main">GH-UniCheck</string>
     <string name="package_name">com.studyxo.shs</string>
     <string name="custom_url_scheme">com.studyxo.shs</string>
 </resources>
